<resources>
    <string name="app_name">GuidePage</string>
    <string name="start_button">开始体验</string>
    <string name="phone_login">用户登录</string>
    <string name="password">密码</string>
    <string name="register">Register</string>
    <string name="forget_password">忘了密码?点此找回</string>
    <string name="register_button">注册</string>
    <string name="login_button">登录</string>
    <string name="about">关于</string>
    <string name="theam">主题</string>
    <string name="setting">设置</string>
    <string name="modle">模式</string>
    <string name="farvorate">喜好</string>
    <string name="phone">手机号</string>
    <string name="sure_code">验证码</string>
    <string name="name">昵称</string>
    <string name="new_password">新密码</string>
    <string name="change_password">修改密码</string>
    <string name="password_again">密码确认</string>
    <string name="register_info">点击"注册"即意味着您已经阅读并同意</string>
    <string name="info">服务条款</string>
    <string name="bluetooth">蓝牙</string>
    <string name="on">开</string>
    <string name="off">关</string>
    <string name="network_connection">请先连接网络！！！！</string>
    <string name="connetction_error">加载失败，请稍后再试！</string>

    <string name="all_select">全选</string>
    <string name="delete">删除</string>
    <string name="not_all_select">全不选</string>
    <string name="save">保存</string>
    <string name="edit">编辑</string>
</resources>
