<?xml version="1.0" encoding="utf-8"?>
<com.jude.fitsystemwindowlayout.FitSystemWindowsLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milk_white"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="?colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/phone_login"
            android:gravity="center_horizontal"
            android:textSize="@dimen/phone_login_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/register_bg_color"
        android:orientation="vertical"
        android:paddingTop="5dip">

        <!--  make Text  float -->
        <net.anumbrella.customedittext.FloatLabelView
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:hint="@string/phone"
            android:layout="@layout/custom_edittext"
            android:textColorHint="@color/register_hint_text_color"
            app:bottomDistance="2dip"
            app:leftDistance="1dip" />

        <net.anumbrella.customedittext.FloatLabelView
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:hint="@string/password"
            android:layout="@layout/custom_edittext"
            android:textColorHint="@color/register_hint_text_color"
            app:bottomDistance="2dip"
            app:leftDistance="1dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="0dip"
                    android:layout_height="40dip"
                    android:layout_marginLeft="10dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_register"
                    android:text="@string/register_button"
                    android:textColor="@color/login_btn_text_color" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dip"
                    android:layout_height="40dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_login"
                    android:text="@string/login_button"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="30dip"
            android:layout_marginLeft="10dip"
            android:text="@string/forget_password"
            android:textColor="#0fc4d9" />
    </LinearLayout>
</com.jude.fitsystemwindowlayout.FitSystemWindowsLinearLayout>