<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/milk_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:background="?colorPrimary">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="找回密码"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/register_bg_color"
        android:orientation="vertical"
        android:paddingTop="5dip">


        <net.anumbrella.customedittext.FloatLabelView
            android:id="@+id/find_pass_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:hint="@string/phone"
            android:layout="@layout/custom_edittext"
            android:textColorHint="@color/register_hint_text_color"
            app:bottomDistance="2dip"
            app:leftDistance="1dip" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <net.anumbrella.customedittext.FloatLabelView
                android:id="@+id/find_pass_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="10dip"
                android:layout_toLeftOf="@+id/imge_code"
                android:hint="@string/sure_code"
                android:layout="@layout/custom_edittext"
                android:textColorHint="@color/register_hint_text_color"
                app:bottomDistance="2dip"
                app:leftDistance="1dip"
                />
            <ImageView
                android:id="@+id/imge_code"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:layout_marginRight="25dp"
                android:layout_alignBottom="@+id/find_pass_code"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="25dp"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
               />

<!--
            <Button
                android:id="@+id/send_code"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_alignBottom="@+id/find_pass_code"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="25dp"
                android:background="@drawable/button_register"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text="发送验证码"

                android:textColor="@color/login_btn_text_color" />
-->
        </RelativeLayout>


        <net.anumbrella.customedittext.FloatLabelView
            android:id="@+id/find_pass_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="10dip"
            android:hint="@string/new_password"
            android:layout="@layout/custom_edittext"
            android:textColorHint="@color/register_hint_text_color"
            app:bottomDistance="2dip"
            app:leftDistance="1dip" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="10dip">

            <Button
                android:id="@+id/find_pass_upadate_pass"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_centerInParent="true"
                android:background="@drawable/button_login"
                android:paddingLeft="50dip"
                android:paddingRight="50dip"
                android:text="@string/change_password"
                android:textColor="@color/white" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>